--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Coba GIT Remote 2</title>
 </head>
 <body>
-    
+    <h1>Selamat Datang</h1>
+    <p>Mari Belajar GIT Remote</p>
+    <p>Selamat Belajar!</p>
 </body>
 </html>
