Menambahkan list detail di index.html

--- a/index.html
+++ b/index.html
@@ -9,5 +9,12 @@
     <h1>Selamat Datang</h1>
     <p>Mari Belajar GIT Remote</p>
     <p>Selamat Belajar!</p>
+
+    <h2>To-Do List:</h2>
+    <ul>
+        <li>Membuat repositori</li>
+        <li>Melakukan clone</li>
+        <li>Belajar di github dan git</li>
+    </ul>
 </body>
 </html>
