Melakukan perubahaan index.html

--- a/index.html
+++ b/index.html
@@ -16,5 +16,7 @@
         <li>Melakukan clone</li>
         <li>Belajar di github dan git</li>
     </ul>
+    
+    <p>Menambahkan perubahan untuk git forking.</p>
 </body>
 </html>
