--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <li>Membuat repositori</li>
         <li>Melakukan clone</li>
         <li>Belajar di github dan git</li>
+        <li>apakabar</li>
     </ul>
     
     <p>Menambahkan perubahan untuk git forking.</p>
